# speed-racer-rl

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  dqn.h  racing_replay.cpp  racing_trainer.cpp  track_config.h  track_overrides.csv  tracks_ai_records.csv  tracks_manifest.json
scripts/: generate_f1_assets.py  update_lap_records.py
trainedModels/sandbox/: best_time.pt
trainedModels/sandbox/base/: best_time.pt
